tried to update the transformers

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PYTHONPATH=.:${PYTHONPATH}
+WORKSPACE_FOLDER=/home/scao/Documents/kaggle-riiid-test
+PYTHONPATH=${WORKSPACE_FOLDER}:${WORKSPACE_FOLDER}/sakt:${WORKSPACE_FOLDER}/transformer
