--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 WORKSPACE_FOLDER=/home/scao/Documents/kaggle-riiid-test
-PYTHONPATH=${WORKSPACE_FOLDER}:${WORKSPACE_FOLDER}/sakt:${WORKSPACE_FOLDER}/transformer
+PYTHONPATH=${WORKSPACE_FOLDER}:${WORKSPACE_FOLDER}/sakt:${WORKSPACE_FOLDER}/transformer:${WORKSPACE_FOLDER}/lgb
